--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: opx-tmpctl
 Section: net
 Priority: optional
-Maintainer: Dell <support@dell.com>
+Maintainer: OpenSwitch Developers <ops-dev@lists.openswitch.net>
 Build-Depends: debhelper (>= 9),dh-autoreconf,dh-systemd,autotools-dev
 Standards-Version: 3.9.3
 
