* Update: Conform to systemd, use sd_notify()
Change-Id: Ib8070993e2ed3f19008f94cd1425e6fe59288dd1
Signed-off-by: Howard Persh <Howard_Persh@dell.com>

--- a/debian/control
+++ b/debian/control
@@ -7,6 +7,6 @@ Standards-Version: 3.9.3
 
 Package: opx-tmpctl
 Architecture: all
-Depends: ${shlibs:Depends}, ${misc:Depends},
+Depends: ${shlibs:Depends}, ${misc:Depends}, python-opx-cps (>= 2.0.0), python-opx-logging (>= 2.0.0)
 Description: Files common to all platforms
 
