--- a/systemd/opx-tmpctl.service
+++ b/systemd/opx-tmpctl.service
@@ -5,6 +5,7 @@ Wants=opx-cps.service
 DefaultDependencies=no
 
 [Service]
+Type=notify
 EnvironmentFile=/etc/opx/opx-environment
 ExecStart=/usr/bin/opx_env_tmpctl_svc
 KillSignal=SIGKILL
